--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,28 +14,107 @@ body {
   margin: auto;
 }
 
-/* Cabecera */
+/*CABECERA*/
+
 header{
-    width: 100%;
-    height: 100px;
-    background-color: #fcfff5;
+  width: 100%;
+  height: 200px;
+  background-color: #CEF5E0;
+}
+
+.logo{
+  padding: 25px 0;
+}
+
+.logo img{
+  width: 100px;
+  display: block;
+  margin: auto;
+}
+
+.menu{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  justify-content: space-between;
+  max-width: 320px;
+  margin: auto;
+}
+
+.menu a{
+  text-decoration: none;
+  color: gray;
+  font-size: 16px;
+}
+/* Fin cabecera */
+
+/* Sección objetivo */
+.detallado{
+  padding-bottom: 80px;
+}
+
+.detallado > .contenedor{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.foto-programando{
+  width: 100%;
+  max-width: 520px;
+}
+
+.foto-programando img{
+  width: 100%;
+}
+
+.objetivo{
+  text-align: center;
+  padding: 16px 0px;
+  width: 520px;
+}
+
+.objetivo p:nth-child(1) {
+  font-size: 14px;
+  color: #002523;
+  padding-bottom: 24px;
+  text-transform: uppercase;
+  border-bottom: 1px solid gray;
+}
+
+.objetivo h3{
+  padding-top: 24px;
+  padding-bottom: 32px;
+  color: #003C74;
+  font-size: 18px;
+}
+
+.objetivo p:nth-child(3){
+  font-size: 14px;
+  color: #002523;
+  padding-bottom: 24px;
+}
+
+.objetivo p:nth-child(4){
+  font-size: 14px;
+  color: #002523;
+  padding-bottom: 16px;
+}
+
+@media all and (min-width:769px){
+  .detallado{
+    padding-top: 80px;
   }
 
-  .menu{
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-
-      justify-content: center;
-      height: 70px;
-      padding: auto;
-      margin: auto;
-      border: black;
+  .foto-programando{
+    margin-right: 30px;
   }
 
-  .menu a{
-    padding: 24px;
-    text-decoration: none;
-    color: black;
-    font-size: 16px;
+  .objetivo{
+    padding-left: 30px;
+    text-align: left;
   }
+}
+/* Fin sección objetivo */
