--- a/css/estilos.css
+++ b/css/estilos.css
@@ -132,7 +132,7 @@ header{
 /* Fin sección objetivo */
 
 /* Sección banner HTML */
-.banner{
+.banner-html{
   width: 100%;
   height: 311px;
   background-image: url(../img/foto-html.jpg);
@@ -140,8 +140,55 @@ header{
   background-color: cover;
 }
 
-.banner > div{
+.banner-html > div{
   width: 100%;
   height: 100%;
   background-color: rgba(209, 219, 189, 0.5);
+}
+
+.accion-html{
+  text-align: center;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  
+  height: 100%;
+}
+
+.accion-html h2{
+  font-size: 40px;
+  color: white;
+  width: 100%;
+  padding: 45px 0;
+  background-color: rgba(255, 255, 255, 0.4);
+  width: 480px;
+}
+
+.accion-html a{
+  font-size: 18px;
+  text-decoration: none;
+  color: white;
+  padding: 10px 48px;
+  background-color: #443627;
+  border-radius: 16px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
+  margin-top: 24px;
+  
+  transition: all 0.3s ease-in-out;
+}
+
+.accion-html a:hover{
+  background-color: #987A5B;
+}
+
+@media all and (min-width:1000px){
+  .banner-html{
+    height: 476px;
+  }
+}
+
+/* Sección Banner CSS */
+.banner-css{
+  
 }
